<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bring_up</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wesleywong08@gmail.com">wesley</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>acoustic_sensor</exec_depend>
  <exec_depend>depth_sensor</exec_depend>
  <exec_depend>imu_sensor</exec_depend>
  <!--add pkg dependencies here follow the top-->  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
